[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "samuelcolvin_aicli.py"

[tool.hatch.build.targets.sdist]
exclude = ["/.github", "/example.mov"]

[project]
name = "samuelcolvin-aicli"
description = "OpenAI powered AI CLI in just a few lines of code."
authors = [{ name = "Samuel Colvin", email = "s@muelcolvin.com" }]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Internet",
    "Topic :: Communications :: Chat",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Environment :: Console",
]
requires-python = ">=3.7"
dependencies = [
    "openai>=0.28",
    "rich>=13",
    "prompt-toolkit>=3",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/samuelcolvin/aicli"
Funding = "https://github.com/sponsors/samuelcolvin"
Source = "https://github.com/samuelcolvin/aicli"

[project.scripts]
aicli = 'samuelcolvin_aicli:cli'

[tool.ruff]
line-length = 120
extend-select = ["Q", "RUF100", "UP", "I"]
flake8-quotes = {inline-quotes = "single", multiline-quotes = "double"}
target-version = "py37"

[tool.black]
color = true
line-length = 120
target-version = ["py37"]
skip-string-normalization = true
